# Auction_AI_Platform

./: .gitignore
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_identity.py  0002_auctions.py  0003_wallet_ledger.py  0004_approvals_kyc.py  0005_future_apis.py  0006_crm_messaging_escrow.py  0007_categories.py  0008_category_sibling_slugs.py  0009_lead_company_name.py  0010_agency_admin_sidebar.py  3da34f8dcb3f_add_featured_properties.py
backend/app/: bootstrap.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  errors.py  events.py  rate_limit.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: analytics.py  auction.py  campaign.py  category.py  escrow.py  kyc.py  lead.py  messaging.py  notification.py  property.py  sidebar.py  user.py  wallet.py  watchlist.py
backend/app/rbac/: permissions.py
backend/app/schemas/: agency.py  auction.py  auth.py  bid.py  campaign.py  category.py  crm.py  escrow.py  kyc.py  lead.py  messaging.py  money.py  notification.py  property.py  report.py  sidebar.py  upload.py  user.py  wallet.py  watchlist.py
backend/app/services/: agency.py  analytics.py  approvals.py  auctions.py  auth.py  bids.py  campaigns.py  categories.py  crm.py  escrow.py  kyc.py  leads.py  mail.py  messaging.py  (+8 more)
backend/docs/: AUCTION_API.md  AUTH_API.md  PROJECT_CONTEXT.txt  PROJECT_STATUS.md
backend/provenix_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py
(+171 files in other folders)
