[project]
name = "provenix-api"
version = "0.1.0"
description = "Provenix API - authentication and identity"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",
    "argon2-cffi>=23.1",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "fakeredis>=2.26",
    "httpx>=0.28",
    "ruff>=0.8",
    "black>=24.10",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
# S105 flags token-purpose and token-type literals as if they were passwords.
"app/schemas/auth.py" = ["S105"]
"app/services/auth.py" = ["S105"]
"tests/*" = ["E402", "S105", "S106"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
